--- a/src/main/web/main.html
+++ b/src/main/web/main.html
@@ -3,68 +3,23 @@
 <head>
     <meta charset="utf-8" />
     <title>JServant v.0.5 (Beta)</title>
-    <!--TODO: download these all locally so this is useable w/o being online-->
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="javabridge.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="jservant.js"></script>
-    <!-- Stopped working for some reason
-    <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
+    <!--
+     Edit boot strap issue fixed. Can't travel up directories in jar for some reason
+     so copied font dir to css dir and remapped css file
     -->
-    <style>
-        body{
-            font:12px/15px Roboto, "Helvetica Neue", Helvetica, sans-serif;
-            background: linear-gradient(to bottom, rgba(181,189,200,1) 0%,rgba(130,140,149,1) 36%,rgba(40,52,59,1) 100%);
-        }
-        select,
-        input,
-        .btn {
-            font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-        }
-        #wrapper{
-            margin:0 auto;
-        }
-        .main-form {
-            width: 360px;
-            min-height: 360px;
-            background: #ffffff;
-            border-radius: 60px;
-            margin:0px auto 20px;
-            padding: 20px;
-        }
-        .form-logo {
-            font-size: 100px;
-            color: #708090;
-        }
-        .button-logo {
-            color: #708090;
-        }
-        .divider{
-            width:10px;
-            height:auto;
-            display:inline-block;
-        }
-        .dividerVertical{
-            width:auto;
-            height:5px;
-            display:inline-block;
-        }
-        .errorRunning {
-            color: #fa1111
-        }
-        .successRunning {
-            color: #11fc11
-        }
-        .notRunning {
-            color: #010101
-        }
-        .running {
-            color: #0101fb
-        }
-    </style>
+    <link href="imports/bootstrap-3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Consider using bootstrap gradient for bg instead, commented out for now
+    <link href="bootstrap-3.3.6/css/bootstrap-theme.css" rel="stylesheet">
+    -->
+    <link href="imports/fonts/google-fonts-roboto.css" rel='stylesheet' type='text/css'>
+    <link href="css/jservant.css" rel="stylesheet">
+    <script src="imports/jquery_1.11.1.min.js"></script>
+    <script src="imports/bootstrap-3.3.6/js/bootstrap.min.js"></script>
+    <script src="js/javabridge.js"></script>
+    <script src="imports/angular_1.5.7.min.js"></script>
+    <script src="js/jservant.js"></script>
+    <!-- Not compatible w/ angular for some reason-->
+    <!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
 </head>
 <body ng-app="JServant" ng-controller="JServantCtrl">
 <div id="wrapper">
@@ -80,15 +35,6 @@
                     <!--
                     <div class="form-group">
                         <input class="form-control" type="text" id="firstname" name="firstname" placeholder="First Name">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="text" id="lastname" name="surname" placeholder="Last Name">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="text" id="phone" name="phone" placeholder="Phone">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="email" id="email" name="email" placeholder="Email">
                     </div>
                     -->
                     <div class="form-group">
